--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
                             </a>
                         </li>
                         <li>
-                            <a href="About-as.html">
+                            <a href="#About-Us">
                                 About Us
                             </a>
                         </li>
                         <li>
-                            <a href="Discover.html">
+                            <a href="#Discover">
                                 Discover
                             </a>
                         </li>
                         <li>
-                            <a href="blog.html">
+                            <a href="#Blog">
                                 Blog
                             </a>
                         </li>
                         <li>
-                            <a href="journal.html">
+                            <a href="#Journals">
                                 Journals
                             </a>
                         </li>
@@ -352,10 +352,97 @@
             <img src="./img/galeri photo 5.png">
         </div>
         </div>
-        <div>
+        <div class="galeri-text">
             <h2>Bali</h2>
             <p>Indonesia</p>
         </div>
+       </section>
+
+       <!--Concat-->
+       <section class="contact">
+        <div class="contact-text-conteiner">
+            <h2>Contact a Travel Researcher</h2>
+            <p>We always aim to reply within 24 hours.</p>
+        </div>
+
+        <div class="contact-adres-conteiner">
+            <div class="phone">
+                <img src="./img/phone.svg">
+                <h2>call us</h2>
+                <h3>+91 956545463</h3>
+                <p>We are online now</p>
+            </div>
+
+            <div class="mail">
+                <img src="./img/mail.svg">
+                <h2>Send us an Enquiry</h2>
+            </div>
+        </div>
+       </section>
+
+       <!--Last page-->
+
+       <section class="last-page">
+        <div class="last-title">
+            <h2>Raido.</h2>
+        </div>
+
+        <div class="last-icone">
+            <img src="./img/facebook.svg">
+            <img src="./img/instagram.svg">
+            <img src="./img/twiter.svg">
+            <img src="./img/linkdin.svg">
+        </div>
+
+        <div class="last-information">
+            <h2>Cheap Romantic Vacations. Many people feel that there is a limited amount of abundance, wealth, or chances to succeed in life.</h2>
+        </div>
+
+        <footer> 
+            <nav>
+            <ul class="last-menu">
+            <li class="active">
+                <a href="#home">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="#About-us">
+                    About Us
+                </a>
+            </li>
+            <li>
+                <a href="#Discover">
+                    Discover
+                </a>
+            </li>
+            <li>
+                <a href="#Blog">
+                    Blog
+                </a>
+            </li>
+            <li>
+                <a href="#Journals">
+                    Journals
+                </a>
+            </li>
+            <li>
+                <a href="#Gallery">
+                    Gallery 
+                </a>
+            </li>
+            <li>
+                <a href="#contact">
+                    Contact
+                </a>
+            </li>
+        </ul>
+            </nav>
+    </footer>
+
+          <div class="page-bottom">
+            <h2>© 2022 All Right Reserved</h2>
+          </div>
        </section>
 
     </body>
