--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <header>
+        <header id="heder">
             <div class="container">
                 <a href="/">
                     <img src="./img/logo.svg" alt="Radio" />
@@ -17,37 +17,38 @@
                 <nav>
                     <ul id="header-menu">
                         <li class="active">
-                            <a href="#home">
+                            <a href="#home" id=""> 
                                 Home
                             </a>
                         </li>
-                        <li>
-                            <a href="#About-Us">
+                        <li id="about-as-btn">
+                            <a href="#About-as" >
+                               
                                 About Us
                             </a>
                         </li>
-                        <li>
-                            <a href="#Discover">
+                        <li id="discover-btn">
+                            <a href="#Discover" >
                                 Discover
                             </a>
                         </li>
-                        <li>
-                            <a href="#Blog">
+                        <li id="blog-btn">
+                            <a href="#Blog" >
                                 Blog
                             </a>
                         </li>
-                        <li>
-                            <a href="#Journals">
+                        <li id="journal-btn">
+                            <a href="#Journals" >
                                 Journals
                             </a>
                         </li>
                         <li>
-                            <a href="#gallery">
+                            <a href="#gallery" id="galery-btn">
                                 Gallery 
                             </a>
                         </li>
                         <li>
-                            <a href="#contact">
+                            <a href="#contact" id="contact-btn">
                                 Contact
                             </a>
                         </li>
@@ -83,7 +84,7 @@
         </section>
 
         <!--About-As-->
-        <section class="aboutas">
+        <section class="aboutas" id="about-as-page">
             <div class="information">
                 <div class="left-container">
                     <h2>About us</h2>
@@ -123,7 +124,7 @@
     
         <!--Discover-->
 
-        <section class="discover">
+        <section class="discover" id="discover-page">
             <div class="container-discover">
                 <div class="discover-title">
                     <h2 >Discover the most engaging places</h2>
@@ -181,7 +182,7 @@
         </section>
 
         <!--Blog-->
-        <section class="Blog">
+        <section class="Blog" id="blo-page">
             <div class="Blog-title">
                 <h2>Latest on the Blogs</h2>
                 <p>We want to help you to travel better!</p>
@@ -210,7 +211,7 @@
         </section>
 
         <!--journal-->
-        <section class="journal">
+        <section class="journal" id="journal-page">
             <div class="journal-title">
                <h2>The Travel Journals</h2>
                <p>A journal is a place to record new things you have discovered while exploring various places you visit.</p>
@@ -329,7 +330,7 @@
 
        <!-- Galeri photo -->
 
-       <section class="galeri-phoths">
+       <section class="galeri-phoths" id="galeri-page">
         <div class="galeri-title">
             <h2>Gallery Photos</h2>
             <p>Explore the most beautiful places in the world.</p>
@@ -359,7 +360,7 @@
        </section>
 
        <!--Concat-->
-       <section class="contact">
+       <section class="contact" id="contact-page">
         <div class="contact-text-conteiner">
             <h2>Contact a Travel Researcher</h2>
             <p>We always aim to reply within 24 hours.</p>
@@ -446,5 +447,5 @@
        </section>
 
     </body>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
 </html>
